# omicvision

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
task1/: README.md  fit_and_plot.py
task2/: README.md  chat.py
task3/: README.md  solver.py
